sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:43: error: not found: value j
  return j
         ^BubbleBaseball:59: error: not found: value j
  return j
         ^